# icp-robots

./: .gitignore  Doxyfile  Makefile  README.md  README.txt  class-diagram.drawio  test.txt
examples/: cpp.txt  hello.txt  icp.txt
src/: CMakeLists.txt  auto_robot.cpp  auto_robot.hpp  control_robot.cpp  control_robot.hpp  loader.cpp  loader.hpp  main.cpp  menu.cpp  menu.hpp  obstacle.cpp  obstacle.hpp  redit_menu.cpp  redit_menu.hpp  robot.cpp  robot.hpp  room.cpp  room.hpp  scene_obj.cpp  scene_obj.hpp  sim_controls.cpp  sim_controls.hpp  window.cpp  window.hpp
